Bug 106340 - Buttons overlap other buttons when assigning Format options in Find & Replace dialog
Summary: Buttons overlap other buttons when assigning Format options in Find & Replace...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.3
Keywords: bibisected, bisected, regression
: 115199 116548 118175 (view as bug list)
Depends on:
Blocks: Find&Replace-Dialog
  Show dependency treegraph
 
Reported: 2017-03-05 16:01 UTC by Regina Henschel
Modified: 2018-10-08 11:08 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot after switch to search for attribute (23.71 KB, image/png)
2017-03-05 16:01 UTC, Regina Henschel
Details
Find-Replace Buttons Overlap when "Attributes" selected (like tabstop) (47.64 KB, image/png)
2018-05-31 01:19 UTC, David C. Rankin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-03-05 16:01:50 UTC
Created attachment 131652 [details]
Screenshot after switch to search for attribute

When you search for an attribute or for a format in the Find&Replace dialog, then a line is added below the Find: field. This shifts the rest down, so that the buttons overlap, see attached screenshot. If you close and open the dialog again, the dialog has adapted to the new height. So the problem is only, that it does not adapt immediately.
Comment 1 Xisco Faulí 2017-03-08 11:29:38 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: d3676ceeec55a41337ce5e6bc596f4f100d0638e
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

Steps:
1. Open writer
2. Edit - Find & Replace
3. Expand submenu - Format
4. Select a font color
5. Ok
Comment 2 Xisco Faulí 2018-01-24 14:53:49 UTC
*** Bug 115199 has been marked as a duplicate of this bug. ***
Comment 3 Yousuf Philips (jay) (retired) 2018-01-24 14:59:46 UTC
Regression started in 5.2, so likely introduced with the redesign of the dialog in bug 98539. This seems to be a refresh issue, as closing and reopening 'Options' fixes the issue.
Comment 4 Xisco Faulí 2018-01-25 09:45:49 UTC
Regression introduced by:

author	Akshay Deep <akshaydeepiitr@gmail.com>	2016-03-08 19:54:57 +0530
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2016-04-04 08:51:17 +0000
commit beeef93480fae65840646e4e36aa888efe92579a (patch)
tree 7bd736c58b22f84429828e32870d669cd6ea91e1
parent 0085eb42fdb7cceece11004841c50f3008c9e120 (diff)
tdf#98417, tdf#98539: DIALOG: Improvements to the Find & Replace dialog.
Added Find Previous Button.
Replaced backward checkbox with 'Replace Backward' from other options.
Modified Dialog Layout as per the attachment in bug report.
Removed vertical spacing in parent_container_box to reduce height of the dialog.
Removed InfoBox from ReplaceAll functionality in writer, shifted it to SearchLabel.
Attribute labels only show up when attribues are used in search, else they remain hidden.

Bisected with: bibisect-linux-64-5.2

Adding Cc: to Akshay Deep
Comment 5 Dieter 2018-03-21 19:43:53 UTC
*** Bug 116548 has been marked as a duplicate of this bug. ***
Comment 6 David C. Rankin 2018-05-31 01:19:17 UTC
Created attachment 142428 [details]
Find-Replace Buttons Overlap when "Attributes" selected (like tabstop)

Buttons overlap in dialog - Gtk+3 Strikes Again....
Comment 7 Thomas Lendo 2018-06-14 22:20:19 UTC
*** Bug 118175 has been marked as a duplicate of this bug. ***
Comment 8 Caolán McNamara 2018-10-04 13:50:19 UTC
Its the searchdesc line of text. Its initially not visible, so the dialog is sized without its effect. Then its made visible after the dialog is shown, so things compress to try and fit it in.

To solve, either the dialog is resized when searchdesc is shown/hidden or the dialog is initially sized with the space for that line of text included
Comment 9 Commit Notification 2018-10-04 20:22:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=78010a4db197ac44fb729a122464847931ee0e5b

Resolves: tdf#106340 resize dialog when search/replace labels are shown/hidden

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2018-10-07 19:42:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7dbe17d5a6b866cca9b81418f3f0cd1d32214265&h=libreoffice-6-1

Resolves: tdf#106340 resize dialog when search/replace labels are shown/hidden

It will be available in 6.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2018-10-08 11:08:30 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 4854acc7929ea58632c5d0f7f80a4adc3c62b8cd
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, thanks for fixing this!!