Resolves: tdf#106340 resize dialog when search/replace labels are shown/hidden

Change-Id: I1e20807f613a73c7dbefcb8e331f99d484eb5c04